# gemini-structured-output

./: .gitignore  Cargo.toml  ENUM_FLATTENING_ISSUE.md  FIXES.md  IMPLEMENTATION_SUMMARY.md  README.md
examples/: agentic_batching.rs  agentic_workflow.rs  basic_structured.rs  benchmark.rs  caching.rs  complex_extraction.rs  dynamic_schema.rs  ergonomic_workflow.rs  financial_forecast.rs  forecast_eval.rs  interactive_session.rs  macro_tools.rs  mock_testing.rs  observability.rs  parallel_reduction.rs  refinement.rs  refinement_with_files.rs  tool_loop.rs  workflow.rs  workflow_metrics.rs
gemini-structured-macros/: Cargo.toml
gemini-structured-macros/src/: agent.rs  lib.rs  prompt.rs  tools.rs  validation.rs
src/: adapter.rs  agent.rs  caching.rs  client.rs  context.rs  error.rs  evals.rs  files.rs  generator.rs  helpers.rs  lib.rs  models.rs  patching.rs  request.rs  schema.rs  session.rs  tools.rs
src/workflow/: batch.rs  chain.rs  checkpoint.rs  events.rs  instrumented.rs  legacy.rs  metrics.rs  mod.rs  parallel.rs  reduce.rs  review.rs  router.rs  state.rs  tap.rs  traits.rs  windowed.rs
tests/: debug_hashmap.rs  json_schema_flow.rs  probe_enum_map_keys_strict_vs_prompt.rs  probe_enum_map_schema_transform.rs  probe_schema_capabilities.rs  repro_array_wrapping.rs  repro_case_insensitive_enum_key.rs  repro_forecaster_payload.rs  repro_lowercase_enum_string.rs  repro_nested_enum.rs  repro_real_xero.rs  repro_xero_enum.rs  stress_enum_map_keys.rs  stress_large_payload_refinement.rs  stress_polymorphic_recursion.rs  stress_tool_pipeline.rs  stress_untagged_enums.rs  test_forecast_schema.rs  test_full_structure.rs  test_normalize_hashmap.rs  test_processor_enum.rs  test_real_error_reproduction.rs  test_strip_x_fields.rs  test_unflatten_logic.rs  test_x_additional_props.rs
