[workspace]
members = [".", "gemini-structured-macros"]

[package]
name = "gemini-structured-output"
version = "0.1.0"
edition = "2021"
description = "High-level structured output helpers for Gemini API with schema generation, caching, and refinement"
license = "MIT"
repository = "https://github.com/noahbclarkson/gemini-structured-output"

[features]
default = []
helpers = []
evals = []
macros = ["dep:gemini-structured-macros"]

[dependencies]
gemini-rust = { git = "https://github.com/flachesis/gemini-rust" }
gemini-structured-macros = { path = "./gemini-structured-macros", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
schemars = { version = "1.2", features = ["chrono04", "preserve_order"] }
json-patch = "4.1"
jsonschema = "0.38.1"
thiserror = "2.0.17"
async-trait = "0.1.89"
futures = "0.3"
tracing = "0.1.43"
uuid = { version = "1.19", features = ["v4"] }
tokio = { version = "1.48", features = ["full"] }
mime_guess = "2.0.5"
sha2 = "0.10.9"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
xero-forecasting = { path = "../AI Forecaster/xero-forecasting" }


[[example]]
name = "basic_structured"
path = "examples/basic_structured.rs"

[[example]]
name = "caching"
path = "examples/caching.rs"

[[example]]
name = "complex_extraction"
path = "examples/complex_extraction.rs"

[[example]]
name = "refinement"
path = "examples/refinement.rs"

[[example]]
name = "tool_loop"
path = "examples/tool_loop.rs"

[[example]]
name = "workflow"
path = "examples/workflow.rs"

[[example]]
name = "financial_forecast"
path = "examples/financial_forecast.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"
required-features = ["evals"]

[[example]]
name = "forecast_eval"
path = "examples/forecast_eval.rs"
required-features = ["evals", "macros"]

[[example]]
name = "macro_tools"
path = "examples/macro_tools.rs"
required-features = ["macros"]

[[example]]
name = "agentic_workflow"
path = "examples/agentic_workflow.rs"
required-features = ["macros"]

[[example]]
name = "agentic_batching"
path = "examples/agentic_batching.rs"
required-features = ["macros"]

[[example]]
name = "ergonomic_workflow"
path = "examples/ergonomic_workflow.rs"
required-features = ["macros"]

[[example]]
name = "parallel_reduction"
path = "examples/parallel_reduction.rs"
required-features = ["macros"]

[[example]]
name = "workflow_metrics"
path = "examples/workflow_metrics.rs"
required-features = ["macros"]

[[example]]
name = "mock_testing"
path = "examples/mock_testing.rs"

[[example]]
name = "dynamic_schema"
path = "examples/dynamic_schema.rs"

[[example]]
name = "observability"
path = "examples/observability.rs"
required-features = ["macros"]
